--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,9 +8,8 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com/SimplyTim/blog_simple_ml_model
+
 format:
   html:
     theme:
